@@ -54,7 +54,7 @@
 //-- MG_FROSTDRIVER
 15,800,1500,0,0,3000:6000:9000:12000:15000:18000:21000:24000:27000:30000
 //-- MG_STONECURSE
-16,1000,0,0,0,11000:12000:13000:14000:15000:16000:17000:18000:19000:20000
+16,1000,0,0,5000,11000:12000:13000:14000:15000:16000:17000:18000:19000:20000
 //-- MG_FIREBALL
 17,1500:1500:1500:1500:1500:1000:1000:1000:1000:1000,1500:1500:1500:1500:1500:1000:1000:1000:1000:1000,0,0,0
 //-- MG_FIREWALL
@@ -317,7 +317,7 @@
 //-- NPC_STUNATTACK
 179,0,0,0,0,3000
 //-- NPC_PETRIFYATTACK
-180,0,0,0,0,10000:11000:12000:13000:14000:15000:16000:17000:18000:19000
+180,0,0,0,5000,10000:11000:12000:13000:14000:15000:16000:17000:18000:19000
 //-- NPC_CURSEATTACK
 181,0,0,0,0,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
 //-- NPC_SLEEPATTACK
